# is_number

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists0.txt  CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt  README.md  booststrap.sh  is_number.c  is_number.h  main.c  test.c
